--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<html>
+    <head>
+        <title>Calculator </title>
+        <link rel ="stylesheet" type="text/css" href="pg2.css">
+        <link rel ="stylesheet" type="text/css" href="pg3.css">
+<body>
 <div class="container">
     <form name="form">
         <input type="text" placeholder="0" name="answer" class="calculation_input" disabled>
@@ -27,3 +33,5 @@
         <input type="button" value="=" onclick="form.answer.value = eval(form.answer.value)" class="btn" id="equal">
     </form>
 </div>
+</body>
+</html>
