--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <input type="button" value="7" onclick="form.answer.value += '7' " class="btn">
         <input type="button" value="8" onclick="form.answer.value += '8' " class="btn">
         <input type="button" value="9" onclick="form.answer.value += '9' " class="btn">
-        <input type="button" value="+" onclick="form.answer.value += '/' " class="btn">
+        <input type="button" value="/" onclick="form.answer.value += '/' " class="btn">
         <br>
         <input type="button" value="0" onclick="form.answer.value += '0' " class="btn">
         <input type="button" value="00" onclick="form.answer.value += '00' " class="btn">
